// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`astToReact util fixture clike 1`] = `
<pre>
  int 
  <span
    className="token function"
    key="cv-0-1"
  >
    main
  </span>
  <span
    className="token punctuation"
    key="cv-0-2"
  >
    (
  </span>
  <span
    className="token punctuation"
    key="cv-0-3"
  >
    )
  </span>
   
  <span
    className="token punctuation"
    key="cv-0-5"
  >
    {
  </span>
  
  
  <span
    className="token comment"
    key="cv-0-7"
  >
    // some dumb code
  </span>
  
  
  <span
    className="token keyword"
    key="cv-0-9"
  >
    return
  </span>
   
  <span
    className="token number"
    key="cv-0-11"
  >
    0
  </span>
  <span
    className="token punctuation"
    key="cv-0-12"
  >
    ;
  </span>
  

  <span
    className="token punctuation"
    key="cv-0-14"
  >
    }
  </span>
</pre>
`;

exports[`astToReact util fixture javascript 1`] = `
<pre>
  <span
    className="token keyword"
    key="cv-0-0"
  >
    const
  </span>
   defaultValue 
  <span
    className="token operator"
    key="cv-0-2"
  >
    =
  </span>
   stoplight
  <span
    className="token punctuation"
    key="cv-0-4"
  >
    .
  </span>
  <span
    className="token function"
    key="cv-0-5"
  >
    io
  </span>
  <span
    className="token punctuation"
    key="cv-0-6"
  >
    (
  </span>
  <span
    className="token punctuation"
    key="cv-0-7"
  >
    )
  </span>
  <span
    className="token punctuation"
    key="cv-0-8"
  >
    ;
  </span>
</pre>
`;
